--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
   },
   "homepage": "https://bridgitsocial.com",
   "devDependencies": {
-    "vite": "^5.0.0",
-    "prettier": "^3.1.0",
+    "gray-matter": "^4.0.3",
     "marked": "^11.0.0",
-    "gray-matter": "^4.0.3"
+    "prettier": "^3.1.0",
+    "terser": "^5.44.1",
+    "vite": "^5.0.0"
   },
   "engines": {
     "node": ">=18.0.0",
